remove stupid admin user creation as default

--- a/exp/config/com.enonic.xp.web.vhost.cfg
+++ b/exp/config/com.enonic.xp.web.vhost.cfg
@@ -2,7 +2,7 @@ enabled = true
 
 mapping.site.host = SITE_HOSTNAME
 mapping.site.source = /
-mapping.site.target = /portal/master/superhero
+mapping.site.target = /portal/master/mysite
 
 mapping.admin.host = SITE_HOSTNAME
 mapping.admin.source = /admin
