--- a/exp/config/com.enonic.xp.web.vhost.cfg
+++ b/exp/config/com.enonic.xp.web.vhost.cfg
@@ -9,10 +9,14 @@ mapping.admin.source = /admin
 mapping.admin.target = /admin
 mapping.admin.userStore = system
 
+mapping.wwwapi.host = SITE_HOSTNAME
+mapping.wwwapi.source = /api
+mapping.wwwapi.target = /api
+
 mapping.api.host = localhost
 mapping.api.source = /api
 mapping.api.target = /api
 
-mapping.wwwapi.host = SITE_HOSTNAME
-mapping.wwwapi.source = /api
-mapping.wwwapi.target = /api
+mapping.status.host = localhost
+mapping.status.source = /status
+mapping.status.target = /status
