added apache templates

--- a/_apache_templates/apache2_no_ssl/sites/vhost.example.conf.template
+++ b/_apache_templates/apache2_no_ssl/sites/vhost.example.conf.template
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
-  ServerName ##SITE_HOSTNAME##
-  ServerAlias ##www.SITE_HOSTNAME##
+  ServerName SITE_HOSTNAME
+  ServerAlias www.SITE_HOSTNAME
 
   DocumentRoot /var/www/html/
 
