--- a/exp/config/com.enonic.xp.web.vhost.cfg
+++ b/exp/config/com.enonic.xp.web.vhost.cfg
@@ -1,15 +1,15 @@
 enabled = true
 
-mapping.site.host = SITE_HOSTNAME
+mapping.site.host = ##SITE_HOSTNAME##
 mapping.site.source = /
 mapping.site.target = /portal/master/mysite
 
-mapping.admin.host = SITE_HOSTNAME
+mapping.admin.host = ##SITE_HOSTNAME##
 mapping.admin.source = /admin
 mapping.admin.target = /admin
 mapping.admin.userStore = system
 
-mapping.wwwapi.host = SITE_HOSTNAME
+mapping.wwwapi.host = ##SITE_HOSTNAME##
 mapping.wwwapi.source = /api
 mapping.wwwapi.target = /api
 
