Apache signature off

--- a/_apache_templates/apache2_letsencrypt/sites/vhost.example.conf.template
+++ b/_apache_templates/apache2_letsencrypt/sites/vhost.example.conf.template
@@ -1,3 +1,8 @@
+Header unset server
+Header always unset server
+ServerSignature Off
+ServerTokens Prod
+
 <VirtualHost *:80>
   ServerName ##SITE_HOSTNAME##
   ServerAlias www.##SITE_HOSTNAME##
