--- a/exp/config/com.enonic.xp.web.vhost.cfg
+++ b/exp/config/com.enonic.xp.web.vhost.cfg
@@ -2,12 +2,12 @@ enabled = false
 
 mapping.site.host = ##SITE_HOSTNAME##
 mapping.site.source = /
-mapping.site.target = /portal/master/mysite
+mapping.site.target = /site/default/master/##SITE_HOSTNAME##
 
 mapping.admin.host = ##SITE_HOSTNAME##
 mapping.admin.source = /admin
 mapping.admin.target = /admin
-mapping.admin.userStore = system
+mapping.admin.idProvider.system = default
 
 mapping.wwwapi.host = ##SITE_HOSTNAME##
 mapping.wwwapi.source = /api
