--- a/docker-compose_letsencrypt.yml
+++ b/docker-compose_letsencrypt.yml
@@ -27,6 +27,7 @@ services:
       - repo:/enonic-xp/home/repo
       - work:/enonic-xp/home/work
       - snapshots:/enonic-xp/home/snapshots
+      - data:/enonic-xp/home/data
     labels:
       io.enonic.backup.prescripts: "/usr/local/bin/backup.sh"
   mail:
@@ -38,5 +39,6 @@ volumes:
   repo:
   work:
   snapshots:
+  data:
   varletsencrypt:
   etcletsencrypt:
